Add /api/patient-groups/calculate endpoints to expose patient group calculation.

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -8,6 +8,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Controllers\" />
     <Folder Include="Services\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,5 +17,6 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\ValuesController.cs" />
+    <Compile Remove="Models.cs" />
   </ItemGroup>
 </Project>
